5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1756_762.log
== TEST (2019-05-28 13:15:09) 
-- CODE:
from numpy import *
v = input("Data: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
d = [:2]
m = [2:4]
a = [4:]
t = vet_mes[int(m[2:4]) -1]

print(d,"de",t, "de", a)
-- ERROR:
File "XXXX", line 5
    d = [:2]
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:15:26) 
-- CODE:
from numpy import *
v = input("Data: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
d = [0:2]
m = [2:4]
a = [4:]
t = vet_mes[int(m[2:4]) -1]

print(d,"de",t, "de", a)
-- ERROR:
File "XXXX", line 5
    d = [0:2]
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:16:04) 
-- CODE:
from numpy import *
v = input("Data: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
d = [0:2]
m = [2:4]
a = [4:]
t = vet_mes[int(m[2:4]) -1]

print(d + "de" + t + "de" + a)
-- ERROR:
File "XXXX", line 5
    d = [0:2]
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:16:47) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
v = input("Data: ")
d = [0:2]
m = [2:4]
a = [4:]
t = vet_mes[int(m[2:4]) -1]

print(d + "de" + t + "de" + a)
-- ERROR:
File "XXXX", line 5
    d = [0:2]
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:17:21) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
v = input("Data: ")
d = [0:2]
m = [2:4]
a = [4:]
t = vet_mes[int(m[2:4]) -1]

print(d + "de" + t + "de" + a)
-- EXECUTION TIME:
0.156116
-- ERROR:
  File "/home/codebench/codes/1756/762/main.py", line 5
    d = [0:2]
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:17:22) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
v = input("Data: ")
d = [0:2]
m = [2:4]
a = [4:]
t = vet_mes[int(m[2:4]) -1]

print(d + "de" + t + "de" + a)
-- ERROR:
File "XXXX", line 5
    d = [0:2]
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:17:52) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
v = input("Data: ")
d = v[0:2]
m = v[2:4]
a = v[4:]
t = vet_mes[int(m[2:4]) -1]

print(d + "de" + t + "de" + a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:18:46) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
v = input("Data: ")
d = v[0:2]
m = v[2:4]
a = v[4:]
t = vet_mes[int(v[2:4]) - 1]

print(d + "de" + t + "de" + a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:19:04) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
v = input("Data: ")
d = v[0:2]
m = v[2:4]
a = v[4:]
t = vet_mes[int(v[2:4]) - 1]

print(d + "de" + t + "de" + a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:19:21) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
v = input("Data: ")
d = v[0:2]
m = v[2:4]
a = v[4:]
t = vet_mes[int(v[2:4]) - 1]

print(d + " de " + t + " de " + a)
-- EXECUTION TIME:
0.364085
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
